@@ -29,6 +29,7 @@ static constexpr unsigned PERMISSION_READ = 1;
 static constexpr unsigned PERMISSION_ADD = 2;
 static constexpr unsigned PERMISSION_CONTROL = 4;
 static constexpr unsigned PERMISSION_ADMIN = 8;
+static constexpr unsigned PERMISSION_PLAYER = 16;
 
 int
 getPermissionFromPassword(const char *password, unsigned *permission) noexcept;
