@@ -24,6 +24,7 @@ ver 0.23 (not yet released)
   - snapcast: new plugin
 * tags
   - new tags "ComposerSort", "Ensemble", "Movement", "MovementNumber", and "Location"
+* split permission "player" from "control"
 * new build-time dependency: libfmt
 
 ver 0.22.11 (2021/08/24)
